--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="product-card">
             <div class="product-image pulse" id="productImage">
               <!-- Replace placeholder URL with actual product photo -->
-              <img src="JEANMURaTint.JPG" alt="JEANMURaTint liptint" />
+              <img src="JEANMURaTint.jpg" alt="JEANMURaTint liptint" />
             </div>
             <div style="margin-top:12px;font-size:16px;font-weight:700">JEANMURaTint Liptint • 5ml</div>
             <div class="price">₱149 <span style="font-size:14px;color:var(--muted);font-weight:600">149</span></div>
@@ -166,7 +166,7 @@
             <strong>SWEET SAKURA</strong>
 			<div class="product-image pulse" id="productImage">
               <!-- Replace placeholder URL with actual product photo -->
-              <img src="SWEET SAKURA.JPG" alt="JEANMURaTint liptint" />
+              <img src="SWEET SAKURA.jpg" alt="JEANMURaTint liptint" />
             </div>
             <p style="margin:8px 0;color:var(--muted)">TRY NOW.</p>
           </div>
@@ -174,7 +174,7 @@
             <strong>BARE BLOSSOM</strong>
 			<div class="product-image pulse" id="productImage">
               <!-- Replace placeholder URL with actual product photo -->
-              <img src="BARE BLOSSOM.JPG" alt="JEANMURaTint liptint" />
+              <img src="BARE BLOSSOM.jpg" alt="JEANMURaTint liptint" />
             </div>
             <p style="margin:8px 0;color:var(--muted)">TRY NOW.</p>
           </div>
@@ -182,7 +182,7 @@
             <strong>CHERRY POP</strong>
 			<div class="product-image pulse" id="productImage">
               <!-- Replace placeholder URL with actual product photo -->
-              <img src="CHERRY POP.JPG" alt="JEANMURaTint liptint" />
+              <img src="CHERRY POP.jpg" alt="JEANMURaTint liptint" />
             </div>
             <p style="margin:8px 0;color:var(--muted)">TRY NOW.</p>
           </div>
